# caddy_ai2_ros2_control_hardware_curtis_motor_driver

./: CMakeLists.txt  README.md  hardware_interface_plugin.xml  package.xml
backup_old_code/curtis_motordrive/curtis_controller/: CMakeLists.txt  package.xml
backup_old_code/curtis_motordrive/curtis_controller/config/: motor_params.yaml
backup_old_code/curtis_motordrive/curtis_controller/include/curtis_controller/: curtis_controller.h  master_drive.h  peak_can.h
backup_old_code/curtis_motordrive/curtis_controller/launch/: curtis_controller.launch  curtis_controller.launch~
backup_old_code/curtis_motordrive/curtis_controller/src/: curtis_controller.cpp  master_drive.cpp  peak_can.cpp
backup_old_code/curtis_motordrive/curtis_msgs/: CMakeLists.txt  package.xml
backup_old_code/curtis_motordrive/curtis_msgs/msg/: DriveData.msg  DriveData.msg~  Throttle.msg
bringup/config/: curtis_motor.yaml
bringup/launch/: curtis_motor.launch.py
config/: curtis_motor_driver.yaml
description/ros2_control/: curtis_motor.ros2_control.xacro  curtis_motor.ros2_control_old.xacro
description/urdf/: curtis_motor.urdf.xacro
drivers/: ix_usb_can_2.0.520-REL.tgz
drivers/ix_usb_can_2.0.520-REL/: Makefile
drivers/ix_usb_can_2.0.520-REL/kernel/drivers/net/can/usb/ixxat_usb/: .Module.symvers.cmd  .ix_usb_can.ko.cmd  .ix_usb_can.mod.cmd  .ix_usb_can.mod.o.cmd  .ix_usb_can.o.cmd  .ixxat_usb_cl1.o.cmd  .ixxat_usb_cl2.o.cmd  .ixxat_usb_core.o.cmd  .modules.order.cmd  ix_usb_can.ko  ix_usb_can.mod  ix_usb_can.mod.c  modules.order
hardware/include/caddy_ai2_ros2_control_hardware_curtis_motor_driver/: curtis_motor_driver.hpp  curtis_motor_hardware_interface.hpp
hardware/src/: curtis_motor_driver.cpp  curtis_motor_driver_OLD.cpp  curtis_motor_hardware_interface.cpp  socket_can_interface.cpp
include/caddy_ai2_ros2_control_hardware_curtis_motor_driver/: can_interface.hpp  curtis_motor_driver.hpp  visibility_control.h
launch/: curtis_motor_driver.launch.py
log/: README.md  test_periodic_messages.py
scripts/: asignar_can_motor_drv.sh  asignar_can_steer_drv.sh  crear_interfaz_virtual_vcan_motor_drv.sh  eliminar_interfaz_virtual_vcan_motor_drv.sh
src/: can_interface.cpp
test/curtis_motor_driver/: CMakeLists.txt  README.md
test/curtis_motor_driver/include/: curtis_motor_driver.hpp  socket_can_interface.hpp
test/curtis_motor_driver/src/: curtis_motor_driver.cpp  main.cpp
test/socket_can_interface/: CMakeLists.txt  README.md
test/socket_can_interface/include/: socket_can_interface.hpp
test/socket_can_interface/src/: main.cpp  socket_can_interface.cpp
urdf/: caddy_ai2.urdf.xacro
